Make the loader full screen and fix word wrap in table

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,9 @@
 .loader-wrapper
 {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    height: 100%;
     width: 100%;
     background: #101010;
     padding: 1rem;
@@ -12,6 +13,11 @@
     transition: 500ms;
     opacity: 0;
     visibility: hidden;
+    justify-content: center;
+}
+.table td
+{
+    white-space: nowrap;
 }
 .visible
 {
